fix menu not showing fully in crud, remove old backgrounds in keylines, inherit border radius

--- a/packages/compass-crud/src/components/document-json-view.less
+++ b/packages/compass-crud/src/components/document-json-view.less
@@ -12,11 +12,11 @@
 
     .json-document-is-editing {
       box-shadow: 2px 5px 8px fade(@palette__black, 20%);
+      border-radius: inherit;
     }
 
     .json-ace-editor {
       padding: 10px 10px 10px 0;
-      background: @palette__white;
       overflow: auto;
       flex-basis: auto;
       flex-shrink: 1;
