--- a/packages/compass-crud/src/components/document.less
+++ b/packages/compass-crud/src/components/document.less
@@ -4,6 +4,7 @@
   position: relative;
   text-overflow: ellipsis;
   max-width: 100%;
+  border-radius: inherit;
 
   &::-webkit-scrollbar {
     display: none;
