--- a/packages/compass-explain-plan/src/components/explain-summary/explain-summary.module.less
+++ b/packages/compass-explain-plan/src/components/explain-summary/explain-summary.module.less
@@ -1,7 +1,6 @@
 @import (reference) 'mongodb-compass/src/app/styles/index.less';
 
 .explain-summary {
-  background: @palette__white;
   padding: 12px;
 
   h3 {
